[package]
name = "lua-json"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jzon = "*"
# mlua = { version = "0.9.2", features = ["luau", "macros", "vendored"] }
# rune = { version = "=0.13.1", features=["std", "disable-io"],  default-features = false }